antlr-4.10.1-gen/PRKParser.java
// Generated from PRK.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PRKParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, ZERO=3, ONE=4, NONZERO=5, SIGN=6, HEXAPREFIX=7, BINPREFIX=8, 
		HEXALPHA=9, ALPHA=10, DOT=11, WS=12, US=13, NL=14, SYMBOL=15, LPAR=16, 
		RPAR=17, ASS=18, MUL=19, ADD=20, SUB=21, DIV=22, POW=23, SQR=24, TRUE=25, 
		FALSE=26, BOOL=27, INT=28, FLOAT=29, CHAR=30, STRING=31;
	public static final int
		RULE_syntax = 0, RULE_file = 1, RULE_line = 2, RULE_booleanPRK = 3, RULE_integerPRK = 4, 
		RULE_floatPRK = 5, RULE_charPRK = 6, RULE_stringPRK = 7, RULE_expressionPRK = 8, 
		RULE_assignmentToVarPRK = 9, RULE_declarationPRK = 10, RULE_declareBooleanPRK = 11, 
		RULE_declareIntegerPRK = 12, RULE_declareFloatPRK = 13, RULE_declareCharPRK = 14, 
		RULE_declareStringPRK = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"syntax", "file", "line", "booleanPRK", "integerPRK", "floatPRK", "charPRK", 
			"stringPRK", "expressionPRK", "assignmentToVarPRK", "declarationPRK", 
			"declareBooleanPRK", "declareIntegerPRK", "declareFloatPRK", "declareCharPRK", 
			"declareStringPRK"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'''", "'\"'", "'0'", "'1'", null, null, "'\\u0111\\u017A\\u2026\\u00B0'", 
			"'\\u0111\\u017A\\u2026\\u00B1'", null, null, "'.'", "' '", "'_'", null, 
			null, "'\\u00E2\\u2013\\u00B6'", "'\\u00E2\\u2014\\u20AC'", "'\\u00E2\\u00AC\\u2026'", 
			"'\\u00E2\\u015B\\u2013'", "'\\u00E2\\u017E\\u2022'", "'\\u00E2\\u017E\\u2013'", 
			"'\\u00E2\\u017E\\u2014'", "'\\u00E2\\u015B\\u00A8\\u00E2\\u015B\\u2013'", 
			"'\\u00E2\\u015B\\u00A8\\u00E2\\u017E\\u2014'", "'\\u00E2\\u015B\\u201D'", 
			"'\\u00E2\\u0165\\u015A'", "'\\u00E2\\u0165\\u201C'", "'\\u0111\\u017A\\u201D\\u02D8'", 
			"'\\u0111\\u017A\\u201D\\u0141'", "'\\u0111\\u017A\\u201D\\u02C7'", "'\\u0111\\u017A\\u201D\\u00A0'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "ZERO", "ONE", "NONZERO", "SIGN", "HEXAPREFIX", "BINPREFIX", 
			"HEXALPHA", "ALPHA", "DOT", "WS", "US", "NL", "SYMBOL", "LPAR", "RPAR", 
			"ASS", "MUL", "ADD", "SUB", "DIV", "POW", "SQR", "TRUE", "FALSE", "BOOL", 
			"INT", "FLOAT", "CHAR", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PRK.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PRKParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SyntaxContext extends ParserRuleContext {
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public SyntaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntax; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).enterSyntax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).exitSyntax(this);
		}
	}

	public final SyntaxContext syntax() throws RecognitionException {
		SyntaxContext _localctx = new SyntaxContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_syntax);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			file();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HEXALPHA) | (1L << ALPHA) | (1L << WS) | (1L << US) | (1L << NL) | (1L << ASS) | (1L << BOOL) | (1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << STRING))) != 0)) {
				{
				{
				setState(34);
				line();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public DeclarationPRKContext declarationPRK() {
			return getRuleContext(DeclarationPRKContext.class,0);
		}
		public AssignmentToVarPRKContext assignmentToVarPRK() {
			return getRuleContext(AssignmentToVarPRKContext.class,0);
		}
		public TerminalNode NL() { return getToken(PRKParser.NL, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_line);
		try {
			setState(45);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case INT:
			case FLOAT:
			case CHAR:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				declarationPRK();
				}
				break;
			case HEXALPHA:
			case ALPHA:
			case WS:
			case US:
			case ASS:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				assignmentToVarPRK();
				setState(42);
				match(NL);
				}
				break;
			case NL:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				match(NL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanPRKContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(PRKParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(PRKParser.FALSE, 0); }
		public BooleanPRKContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanPRK; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).enterBooleanPRK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).exitBooleanPRK(this);
		}
	}

	public final BooleanPRKContext booleanPRK() throws RecognitionException {
		BooleanPRKContext _localctx = new BooleanPRKContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_booleanPRK);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerPRKContext extends ParserRuleContext {
		public List<TerminalNode> ZERO() { return getTokens(PRKParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(PRKParser.ZERO, i);
		}
		public List<TerminalNode> ONE() { return getTokens(PRKParser.ONE); }
		public TerminalNode ONE(int i) {
			return getToken(PRKParser.ONE, i);
		}
		public List<TerminalNode> NONZERO() { return getTokens(PRKParser.NONZERO); }
		public TerminalNode NONZERO(int i) {
			return getToken(PRKParser.NONZERO, i);
		}
		public TerminalNode SIGN() { return getToken(PRKParser.SIGN, 0); }
		public TerminalNode BINPREFIX() { return getToken(PRKParser.BINPREFIX, 0); }
		public TerminalNode HEXAPREFIX() { return getToken(PRKParser.HEXAPREFIX, 0); }
		public List<TerminalNode> HEXALPHA() { return getTokens(PRKParser.HEXALPHA); }
		public TerminalNode HEXALPHA(int i) {
			return getToken(PRKParser.HEXALPHA, i);
		}
		public IntegerPRKContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integerPRK; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).enterIntegerPRK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).exitIntegerPRK(this);
		}
	}

	public final IntegerPRKContext integerPRK() throws RecognitionException {
		IntegerPRKContext _localctx = new IntegerPRKContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_integerPRK);
		int _la;
		try {
			int _alt;
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ZERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				match(ZERO);
				}
				break;
			case ONE:
			case NONZERO:
			case SIGN:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SIGN) {
					{
					setState(50);
					match(SIGN);
					}
				}

				setState(53);
				_la = _input.LA(1);
				if ( !(_la==ONE || _la==NONZERO) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(57);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(54);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ZERO) | (1L << ONE) | (1L << NONZERO))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						} 
					}
					setState(59);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				}
				break;
			case BINPREFIX:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				match(BINPREFIX);
				setState(62); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(61);
						_la = _input.LA(1);
						if ( !(_la==ZERO || _la==ONE) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(64); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case HEXAPREFIX:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				match(HEXAPREFIX);
				setState(68); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(67);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ZERO) | (1L << ONE) | (1L << NONZERO) | (1L << HEXALPHA))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(70); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FloatPRKContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(PRKParser.DOT, 0); }
		public TerminalNode SIGN() { return getToken(PRKParser.SIGN, 0); }
		public List<TerminalNode> ZERO() { return getTokens(PRKParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(PRKParser.ZERO, i);
		}
		public List<TerminalNode> ONE() { return getTokens(PRKParser.ONE); }
		public TerminalNode ONE(int i) {
			return getToken(PRKParser.ONE, i);
		}
		public List<TerminalNode> NONZERO() { return getTokens(PRKParser.NONZERO); }
		public TerminalNode NONZERO(int i) {
			return getToken(PRKParser.NONZERO, i);
		}
		public FloatPRKContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floatPRK; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).enterFloatPRK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).exitFloatPRK(this);
		}
	}

	public final FloatPRKContext floatPRK() throws RecognitionException {
		FloatPRKContext _localctx = new FloatPRKContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_floatPRK);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SIGN) {
				{
				setState(74);
				match(SIGN);
				}
			}

			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ZERO) | (1L << ONE) | (1L << NONZERO))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ZERO) | (1L << ONE) | (1L << NONZERO))) != 0) );
			setState(82);
			match(DOT);
			setState(84); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(83);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ZERO) | (1L << ONE) | (1L << NONZERO))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(86); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CharPRKContext extends ParserRuleContext {
		public TerminalNode ZERO() { return getToken(PRKParser.ZERO, 0); }
		public TerminalNode ONE() { return getToken(PRKParser.ONE, 0); }
		public TerminalNode NONZERO() { return getToken(PRKParser.NONZERO, 0); }
		public TerminalNode HEXALPHA() { return getToken(PRKParser.HEXALPHA, 0); }
		public TerminalNode ALPHA() { return getToken(PRKParser.ALPHA, 0); }
		public CharPRKContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_charPRK; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).enterCharPRK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).exitCharPRK(this);
		}
	}

	public final CharPRKContext charPRK() throws RecognitionException {
		CharPRKContext _localctx = new CharPRKContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_charPRK);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__0);
			setState(89);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ZERO) | (1L << ONE) | (1L << NONZERO) | (1L << HEXALPHA) | (1L << ALPHA))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(90);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringPRKContext extends ParserRuleContext {
		public List<TerminalNode> ZERO() { return getTokens(PRKParser.ZERO); }
		public TerminalNode ZERO(int i) {
			return getToken(PRKParser.ZERO, i);
		}
		public List<TerminalNode> ONE() { return getTokens(PRKParser.ONE); }
		public TerminalNode ONE(int i) {
			return getToken(PRKParser.ONE, i);
		}
		public List<TerminalNode> NONZERO() { return getTokens(PRKParser.NONZERO); }
		public TerminalNode NONZERO(int i) {
			return getToken(PRKParser.NONZERO, i);
		}
		public List<TerminalNode> HEXALPHA() { return getTokens(PRKParser.HEXALPHA); }
		public TerminalNode HEXALPHA(int i) {
			return getToken(PRKParser.HEXALPHA, i);
		}
		public List<TerminalNode> ALPHA() { return getTokens(PRKParser.ALPHA); }
		public TerminalNode ALPHA(int i) {
			return getToken(PRKParser.ALPHA, i);
		}
		public List<TerminalNode> DOT() { return getTokens(PRKParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(PRKParser.DOT, i);
		}
		public List<TerminalNode> WS() { return getTokens(PRKParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(PRKParser.WS, i);
		}
		public List<TerminalNode> US() { return getTokens(PRKParser.US); }
		public TerminalNode US(int i) {
			return getToken(PRKParser.US, i);
		}
		public List<TerminalNode> NL() { return getTokens(PRKParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(PRKParser.NL, i);
		}
		public List<TerminalNode> SYMBOL() { return getTokens(PRKParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(PRKParser.SYMBOL, i);
		}
		public StringPRKContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringPRK; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).enterStringPRK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).exitStringPRK(this);
		}
	}

	public final StringPRKContext stringPRK() throws RecognitionException {
		StringPRKContext _localctx = new StringPRKContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stringPRK);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__1);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ZERO) | (1L << ONE) | (1L << NONZERO) | (1L << HEXALPHA) | (1L << ALPHA) | (1L << DOT) | (1L << WS) | (1L << US) | (1L << NL) | (1L << SYMBOL))) != 0)) {
				{
				{
				setState(93);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ZERO) | (1L << ONE) | (1L << NONZERO) | (1L << HEXALPHA) | (1L << ALPHA) | (1L << DOT) | (1L << WS) | (1L << US) | (1L << NL) | (1L << SYMBOL))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionPRKContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(PRKParser.LPAR, 0); }
		public List<ExpressionPRKContext> expressionPRK() {
			return getRuleContexts(ExpressionPRKContext.class);
		}
		public ExpressionPRKContext expressionPRK(int i) {
			return getRuleContext(ExpressionPRKContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(PRKParser.RPAR, 0); }
		public List<TerminalNode> WS() { return getTokens(PRKParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(PRKParser.WS, i);
		}
		public IntegerPRKContext integerPRK() {
			return getRuleContext(IntegerPRKContext.class,0);
		}
		public FloatPRKContext floatPRK() {
			return getRuleContext(FloatPRKContext.class,0);
		}
		public List<TerminalNode> HEXALPHA() { return getTokens(PRKParser.HEXALPHA); }
		public TerminalNode HEXALPHA(int i) {
			return getToken(PRKParser.HEXALPHA, i);
		}
		public List<TerminalNode> ALPHA() { return getTokens(PRKParser.ALPHA); }
		public TerminalNode ALPHA(int i) {
			return getToken(PRKParser.ALPHA, i);
		}
		public List<TerminalNode> US() { return getTokens(PRKParser.US); }
		public TerminalNode US(int i) {
			return getToken(PRKParser.US, i);
		}
		public TerminalNode POW() { return getToken(PRKParser.POW, 0); }
		public TerminalNode SQR() { return getToken(PRKParser.SQR, 0); }
		public TerminalNode MUL() { return getToken(PRKParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(PRKParser.DIV, 0); }
		public TerminalNode ADD() { return getToken(PRKParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(PRKParser.SUB, 0); }
		public ExpressionPRKContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionPRK; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).enterExpressionPRK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PRKListener ) ((PRKListener)listener).exitExpressionPRK(this);
		}
	}

	public final ExpressionPRKContext expressionPRK() throws RecognitionException {
		return expressionPRK(0);
	}
